--- a/packages/react-app/src/App.css
+++ b/packages/react-app/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .form {
-  max-width: 80em;
+  max-width: 60em;
   margin: 3em auto;
 }
 
@@ -16,7 +16,7 @@
   display: flex;
   gap: 1em;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
   margin: 3em 0;
 }
 
