--- a/packages/react-app/src/index.css
+++ b/packages/react-app/src/index.css
@@ -4,7 +4,7 @@
 
 body {
   margin: 0;
-  background-color: rgb(0,20,41) !important;
+  /* background-color: rgb(0,20,41) !important; */
 }
 
 code {
