feat: Add Required info above the button

--- a/packages/react-app/src/App.css
+++ b/packages/react-app/src/App.css
@@ -34,6 +34,12 @@ label {
   height: 3em !important;
 }
 
+.requiredDescription {
+  color: #FFFFFF !important;
+  text-align: end !important;
+  margin-bottom: 3em !important;
+}
+
 .ant-form-item-label > label.ant-form-item-required:not(.ant-form-item-required-mark-optional)::before {
   color: #FFFFFF !important;
   margin-right: 1em !important;
