--- a/packages/react-app/src/App.css
+++ b/packages/react-app/src/App.css
@@ -1,10 +1,14 @@
 .App {
   text-align: center;
   padding-left: calc(100vw - 100%);
+  min-height: 100vh;
+  display: flex !important;
+  flex-direction: column !important;
 }
 
 .main {
-  margin: 3em 2em !important;
+  margin: 1em 2em 4em !important;
+  flex: 1 !important;
 }
 
 .formParent {
@@ -66,7 +70,7 @@ label {
   display: flex;
   gap: 5%;
   justify-content: center;
-  margin-bottom: 2em !important;
+  margin-bottom: 1em !important;
 }
 
 .footerItems {
