--- a/packages/react-app/src/App.css
+++ b/packages/react-app/src/App.css
@@ -80,7 +80,8 @@ label {
 .navbar {
   display: flex;
   justify-content: space-between;
-  margin: 1em 5%;
+  padding: 1em 5%;
+  border-bottom: 1px solid #20457C;
 }
 
 .wrapper {
